[gd_scene load_steps=31 format=3 uid="uid://dsd1ehisxgcag"]

[ext_resource type="Script" uid="uid://bqtvm1wrktkv5" path="res://assets/player/player.gd" id="1_2m8u1"]
[ext_resource type="Texture2D" uid="uid://b5k38numhe6ib" path="res://assets/player/player-sheet.png" id="2_qr3i2"]
[ext_resource type="Texture2D" uid="uid://c64y3unj1mocn" path="res://assets/player/jetpack-sheet.png" id="3_ab6ya"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v2miy"]
atlas = ExtResource("2_qr3i2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouxva"]
atlas = ExtResource("2_qr3i2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5dr7"]
atlas = ExtResource("2_qr3i2")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_toylo"]
atlas = ExtResource("2_qr3i2")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqrt6"]
atlas = ExtResource("2_qr3i2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yeh5e"]
atlas = ExtResource("2_qr3i2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tb4ck"]
atlas = ExtResource("2_qr3i2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwvpd"]
atlas = ExtResource("2_qr3i2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_op4fd"]
atlas = ExtResource("2_qr3i2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2mll"]
atlas = ExtResource("2_qr3i2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_sjh7q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2miy")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouxva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5dr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_toylo")
}],
"loop": true,
"name": &"land",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqrt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yeh5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tb4ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwvpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op4fd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2mll")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_rbgc6"]
atlas = ExtResource("3_ab6ya")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fh5x"]
atlas = ExtResource("3_ab6ya")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptew1"]
atlas = ExtResource("3_ab6ya")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xlq55"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbgc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fh5x")
}],
"loop": true,
"name": &"firing",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptew1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_c3cfg"]
atlas = ExtResource("3_ab6ya")
region = Rect2(96, 0, 32, 32)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mivt7"]
particle_flag_align_y = true
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
angle_min = -90.0
angle_max = -90.0
inherit_velocity_ratio = 1.0
direction = Vector3(0, 1, 0)
spread = 20.0
initial_velocity_min = 800.0
initial_velocity_max = 800.0
angular_velocity_min = -1.60933e-05
angular_velocity_max = -1.60933e-05
gravity = Vector3(0, 98, 0)
hue_variation_min = -2.23517e-08
hue_variation_max = 0.3
collision_mode = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_84ysy"]
atlas = ExtResource("3_ab6ya")
region = Rect2(160, 0, 32, 32)

[sub_resource type="Curve" id="Curve_mjjs8"]
_data = [Vector2(0, 0.186813), 0.0, 0.0, 0, 0, Vector2(0.98374, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_8jsu2"]
curve = SubResource("Curve_mjjs8")

[sub_resource type="Gradient" id="Gradient_pmgsf"]
colors = PackedColorArray(0.456682, 0.339479, 0.242099, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_376ga"]
gradient = SubResource("Gradient_pmgsf")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kkhb7"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 1.0
inherit_velocity_ratio = 1.0
direction = Vector3(-1, 1, 0)
initial_velocity_min = 40.0
initial_velocity_max = 90.0
gravity = Vector3(-90, 10, 0)
damping_min = 50.0
damping_max = 120.0
color_ramp = SubResource("GradientTexture1D_376ga")
alpha_curve = SubResource("CurveTexture_8jsu2")

[sub_resource type="AtlasTexture" id="AtlasTexture_oi7mj"]
atlas = ExtResource("3_ab6ya")
region = Rect2(128, 0, 32, 32)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5ovmu"]
particle_flag_disable_z = true
angle_min = -90.0
angle_max = -90.0
direction = Vector3(-1, 0, 0)
spread = 10.0
initial_velocity_min = 80.0
initial_velocity_max = 200.0
angular_velocity_min = 9.99998
angular_velocity_max = 50.0
gravity = Vector3(-30, 900, 0)
scale_min = 0.8
scale_max = 0.8
color = Color(0.462745, 0.392157, 0.345098, 0.8)
collision_mode = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uopu0"]
size = Vector2(21, 27)

[sub_resource type="CircleShape2D" id="CircleShape2D_nhlov"]
radius = 12.0416

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource("1_2m8u1")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_sjh7q")
animation = &"run"
autoplay = "run"
frame = 4
frame_progress = 0.364099

[node name="JetpackSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_xlq55")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.657066
speed_scale = 3.0

[node name="BulletParticles" type="GPUParticles2D" parent="JetpackSprite"]
unique_name_in_owner = true
z_index = -1
position = Vector2(-9, 13)
emitting = false
amount = 30
texture = SubResource("AtlasTexture_c3cfg")
process_material = SubResource("ParticleProcessMaterial_mivt7")

[node name="ExhaustParticles" type="GPUParticles2D" parent="JetpackSprite"]
unique_name_in_owner = true
position = Vector2(-9, 13)
emitting = false
amount = 30
texture = SubResource("AtlasTexture_84ysy")
fixed_fps = 10
process_material = SubResource("ParticleProcessMaterial_kkhb7")

[node name="CasingParticles" type="GPUParticles2D" parent="JetpackSprite"]
unique_name_in_owner = true
z_index = -1
position = Vector2(-12, 0)
emitting = false
amount = 30
texture = SubResource("AtlasTexture_oi7mj")
lifetime = 2.0
process_material = SubResource("ParticleProcessMaterial_5ovmu")

[node name="PlayerCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_uopu0")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 20

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_nhlov")

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitzone_body_entered"]
